--- a/About.Rmd
+++ b/About.Rmd
@@ -4,8 +4,8 @@ runtime: shiny
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+```{r setup, message = FALSE, include=FALSE, warning = FALSE}
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 ```
 
 ## THIS IS THE ABOUT PAGE 
